// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyDefaultPlugins > should apply default plugins correctly 1`] = `
{
  "cache": {
    "buildDependencies": {
      "rsbuildConfig": [
        "/path/to/rsbuild.config.ts",
      ],
      "tsconfig": [
        "<ROOT>/packages/compat/webpack/tests/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/compat/webpack/tests/node_modules/.cache/webpack",
    "name": "web-development",
    "type": "filesystem",
  },
  "context": "<ROOT>/packages/compat/webpack/tests",
  "devtool": "cheap-module-source-map",
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "experiments": {
    "asyncWebAssembly": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "parser": {
      "javascript": {
        "exportsPresence": "error",
      },
    },
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "<ROOT>/packages/core/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "localIdentName": "[path][name]__[local]-[hash:base64:6]",
                "namedExport": false,
              },
              "sourceMap": false,
            },
          },
          {
            "loader": "<ROOT>/packages/core/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                        "edge >= 88",
                        "firefox >= 78",
                        "safari >= 14",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "name": "web",
  "optimization": {
    "minimize": false,
    "splitChunks": {
      "cacheGroups": {
        "lib-axios": {
          "name": "lib-axios",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "devtoolModuleFilenameTemplate": [Function],
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    HotModuleReplacementPlugin {
      "options": {},
    },
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "static/css/async/[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "static/css/[name].css",
        "ignoreOrder": true,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "modifyTagsFn": [Function],
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""development"",
      },
    },
    ProgressPlugin {
      "compileTime": null,
      "dependenciesCount": 10000,
      "handler": [Function],
      "hasCompileErrors": false,
      "id": "Client",
      "modulesCount": 5000,
      "name": "ProgressPlugin",
      "percentBy": null,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "<ROOT>/packages/compat/webpack/tests",
        "baseUrl": "./",
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
          ".mjs",
          ".json",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
  },
  "target": [
    "web",
    "es2017",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when production 1`] = `
{
  "cache": {
    "buildDependencies": {
      "tsconfig": [
        "<ROOT>/packages/compat/webpack/tests/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/compat/webpack/tests/node_modules/.cache/webpack",
    "name": "web-production",
    "type": "filesystem",
  },
  "context": "<ROOT>/packages/compat/webpack/tests",
  "devtool": false,
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "experiments": {
    "asyncWebAssembly": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "parser": {
      "javascript": {
        "exportsPresence": "error",
      },
    },
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "<ROOT>/packages/core/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "localIdentName": "[local]-[hash:base64:6]",
                "namedExport": false,
              },
              "sourceMap": false,
            },
          },
          {
            "loader": "<ROOT>/packages/core/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "config": false,
                "plugins": [
                  {
                    "browsers": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "chrome >= 87",
                        "edge >= 88",
                        "firefox >= 78",
                        "safari >= 14",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "name": "web",
  "optimization": {
    "minimize": true,
    "splitChunks": {
      "cacheGroups": {
        "lib-axios": {
          "name": "lib-axios",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].[contenthash:8].js",
    "filename": "static/js/[name].[contenthash:8].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "static/css/async/[name].[contenthash:8].css",
        "experimentalUseImportModule": undefined,
        "filename": "static/css/[name].[contenthash:8].css",
        "ignoreOrder": true,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "modifyTagsFn": [Function],
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "compileTime": null,
      "dependenciesCount": 10000,
      "handler": [Function],
      "hasCompileErrors": false,
      "id": "Client",
      "modulesCount": 5000,
      "name": "ProgressPlugin",
      "percentBy": null,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "<ROOT>/packages/compat/webpack/tests",
        "baseUrl": "./",
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
          ".mjs",
          ".json",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
  },
  "target": [
    "web",
    "es2017",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when target node 1`] = `
{
  "cache": {
    "buildDependencies": {
      "tsconfig": [
        "<ROOT>/packages/compat/webpack/tests/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/compat/webpack/tests/node_modules/.cache/webpack",
    "name": "node-production",
    "type": "filesystem",
  },
  "context": "<ROOT>/packages/compat/webpack/tests",
  "devtool": false,
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "experiments": {
    "asyncWebAssembly": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "parser": {
      "javascript": {
        "exportsPresence": "error",
      },
    },
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/core/dist/ignoreCssLoader.cjs",
          },
          {
            "loader": "<ROOT>/packages/core/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "exportOnlyLocals": true,
                "localIdentName": "[local]-[hash:base64:6]",
                "namedExport": false,
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
      {
        "test": /\\\\\\.node\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/core/dist/transformRawLoader.cjs",
            "options": {
              "id": "rsbuild-transform-0",
            },
          },
        ],
      },
    ],
  },
  "name": "node",
  "optimization": {
    "minimize": true,
    "splitChunks": false,
  },
  "output": {
    "chunkFilename": "[name].js",
    "filename": "[name].js",
    "hashFunction": "xxhash64",
    "library": {
      "type": "commonjs2",
    },
    "path": "<ROOT>/packages/compat/webpack/tests/dist/server",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    RsbuildTransformPlugin {},
    DefinePlugin {
      "definitions": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "compileTime": null,
      "dependenciesCount": 10000,
      "handler": [Function],
      "hasCompileErrors": false,
      "id": "Server",
      "modulesCount": 5000,
      "name": "ProgressPlugin",
      "percentBy": null,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "<ROOT>/packages/compat/webpack/tests",
        "baseUrl": "./",
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
          ".mjs",
          ".json",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
  },
  "target": "node",
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when target web worker 1`] = `
{
  "cache": {
    "buildDependencies": {
      "tsconfig": [
        "<ROOT>/packages/compat/webpack/tests/tsconfig.json",
      ],
    },
    "cacheDirectory": "<ROOT>/packages/compat/webpack/tests/node_modules/.cache/webpack",
    "name": "web-worker-production",
    "type": "filesystem",
  },
  "context": "<ROOT>/packages/compat/webpack/tests",
  "devtool": false,
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "experiments": {
    "asyncWebAssembly": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "parser": {
      "javascript": {
        "dynamicImportMode": "eager",
        "exportsPresence": "error",
      },
    },
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/core/dist/ignoreCssLoader.cjs",
          },
          {
            "loader": "<ROOT>/packages/core/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportGlobals": false,
                "exportLocalsConvention": "camelCase",
                "exportOnlyLocals": true,
                "localIdentName": "[local]-[hash:base64:6]",
                "namedExport": false,
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:png\\|jpg\\|jpeg\\|pjpeg\\|pjp\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tif\\|tiff\\|jfif\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:mp4\\|webm\\|ogg\\|mov\\|mp3\\|wav\\|flac\\|aac\\|m4a\\|opus\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 4096,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(\\?:woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
    ],
  },
  "name": "webWorker",
  "optimization": {
    "minimize": true,
    "splitChunks": false,
  },
  "output": {
    "chunkFilename": "static/js/async/[name].[contenthash:8].js",
    "filename": "static/js/[name].[contenthash:8].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/compat/webpack/tests/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    DefinePlugin {
      "definitions": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "compileTime": null,
      "dependenciesCount": 10000,
      "handler": [Function],
      "hasCompileErrors": false,
      "id": "Web Worker",
      "modulesCount": 5000,
      "name": "ProgressPlugin",
      "percentBy": null,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "plugins": [
      TsconfigPathsPlugin {
        "absoluteBaseUrl": "<ROOT>/packages/compat/webpack/tests",
        "baseUrl": "./",
        "extensions": [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
          ".mjs",
          ".json",
        ],
        "log": {
          "log": [Function],
          "logError": [Function],
          "logInfo": [Function],
          "logWarning": [Function],
        },
        "matchPath": [Function],
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
  },
  "target": [
    "webworker",
    "es2017",
  ],
}
`;
